--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@testing-library/svelte": "^5.2.1",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint": "^9.6.0",
+		"@vitest/eslint-plugin": "^1.0.3",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -42,5 +43,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-carousel": "^1.0.25"
+	}
 }
