--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "$lib/*": ["src/lib/*"],
+      "$routes/*": ["/src/routes/*"],
+      "$style/*": ["src/style/*"],
+      "$types/*": ["src/types/*"],
+      "$factories/*": ["src/factories/*"],
+    },
     "allowJs": true,
     "checkJs": false,
     "esModuleInterop": true,
