--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tauri-apps/api": "^1.6.0",
-		"@tauri-apps/cli": "^1.6.0",
+		"@tauri-apps/api": "^2.0.0-rc.0",
+		"@tauri-apps/cli": "^2.0.0-rc.0",
 		"@testing-library/jest-dom": "^6.4.8",
 		"@testing-library/svelte": "^5.2.1",
 		"@testing-library/user-event": "^14.5.2",
@@ -45,7 +45,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tauri-apps/plugin-global-shortcut": "^2.0.0-rc.0",
+		"@tauri-apps/plugin-clipboard-manager": "^2.0.0-rc.1",
+		"@tauri-apps/plugin-global-shortcut": "^2.0.0-rc.1",
 		"lucide-svelte": "^0.439.0",
 		"svelte-carousel": "^1.0.25"
 	}
