--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "allowImportingTsExtensions": true,
     "types": [
       "vitest/globals",
       "@testing-library/jest-dom"
